# newattn

./: .gitignore  README.md  pyproject.toml
experiments/: _bootstrap.py  exp001b_transformer.py  exp002_mamba2.py  exp003_gdn2.py  exp004_titans.py  exp005_titans_stable.py  exp006_generalization.py
notebooks/: mqar_exp001b_transformer.ipynb  mqar_exp002_mamba2.ipynb  mqar_exp003_gdn2.ipynb
src/newattn/: __init__.py  cli.py  config.py  data.py  determinism.py  model.py  sweep.py  tracking.py  train.py
src/newattn/mixers/: __init__.py  attention.py  base.py  gdn2.py  gdn2_triton.py  mamba2.py  titans.py
tests/: test_generalization_eval.py  test_titans_chunk.py
